# libgw32c

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  configure_help.txt  dwa.sed  fstab  libc-bcc.def  libc.def  libc.rc  libca.def  libcn.txt  libcns.txt  make.common  makefile.mingw  mkdefalias  mkdefalias.sh  mkdlla.sh  mkinstalldirs  mwlibc  sdwaq.def  wa.txt
argp/: Makefile  Makefile.am  Makefile.in  argp-fmtstream.h  argp-help.c  argp.h  ll
argp/.deps/: argp-ba.Po  argp-eexst.Po  argp-fmtstream.Po  argp-fs-xinl.Po  argp-help.Po  argp-parse.Po  argp-pv.Po  argp-pvh.Po  argp-xinl.Po
catgets/: Makefile  Makefile.am  Makefile.in  catgetsinfo.h  gencat.rc
catgets/.deps/: catgets.Po  gencat.Po  open_catalog.Po
crypt/: Makefile  Makefile.am  Makefile.in  cert.rc  crypt.rc  makefile.orig  md5c-test.rc  md5c_test.rc  md5test.rc  ufc.rc
crypt/.deps/: cert.Po  crypt-entry.Po  crypt.Po  crypt_util.Po  md5-crypt.Po  md5.Po  md5c-test.Po  md5test.Po  ufc.Po
csu/: Makefile  Makefile.am  Makefile.in  errno.c  init-first.c  werrno.lst
csu/.deps/: errno-errno.Po  errno.Po  init-first.Po
dirent/: Makefile  Makefile.am  Makefile.in  bug-readdir1.c  closedir.c  dirent-internal.h  dirent.c  dirent.emacs  dirent.emacs.txt  list.c  opendir-tst1.c  opendir.c  readdir.c  readdir64.c  readdir64_r.c  readdir_r.c  rewinddir.c  scandir.c  scandir64.c  seekdir.c  telldir.c  tst-dir.c
dirent/.deps/: alphasort.Po  alphasort64.Po  bug-readdir1.Po  closedir.Po  dirfd.Po  list-list.Po  opendir-tst1.Po  opendir.Po  readdir.Po  readdir64.Po  readdir64_r.Po  readdir_r.Po  rewinddir.Po  scandir.Po  scandir64.Po  seekdir.Po  telldir.Po  tst-dir.Po  tst-seekdir.Po  versionsort.Po  versionsort64.Po
dirent/aa/: oc
grp/: Makefile  Makefile.am  Makefile.in  endgrent.c  getgrent.c  getgrent_r.c  getgrgid.c  getgrnam.c  getgroups.c  setgrent.c
grp/.deps/: endgrent.Po  getgrent.Po  getgrent_r.Po  getgrgid.Po  getgrnam.Po  getgroups.Po  setgrent.Po
iconv/: Makefile  Makefile.am  Makefile.in  lc
inet/: Makefile  Makefile.am  Makefile.in  endhstent.c  gethostent.c  gethstent.c  sethstent.c
inet/.deps/: endhstent.Po  gethstent.Po  sethstent.Po
io/: Makefile  Makefile.am  Makefile.in  abl.lnk  access.c  chdir.c  chown.c  euidaccess.c  fchdir.c  fchmod.c  fchown.c  fcntl.c  fstat.c  fstat64.c  fstatfs.c  fstatfs64.c  fstatvfs.c  fstatvfs64.c  fxstat.c  fxstat64.c  getcwd.c  getdirname.c  getwd.c  gstat.c  gstat.rc  hxstat64.c  lchown.c  ld  link.c  ln.rc  lstat.c  lstat64.c  lxstat.c  lxstat64.c  mfstat.c  mkdir.c  mkfifo.c  mknod.c  pipe.c  readlink.c  (+23 more)
io/.deps/: access.Po  chdir.Po  chown.Po  euidaccess-euidaccess.Po  euidaccess.Po  fchdir.Po  fchmod.Po  fchown.Po  fcntl.Po  fstat-fstat.Po  fstat.Po  fstat64-fstat64.Po  fstat64.Po  fstatfs.Po  fstatfs64.Po  fstatvfs.Po  fstatvfs64.Po  fts.Po  ftw.Po  ftw64.Po  ftwtest.Po  fxstat.Po  fxstat64.Po  getcwd.Po  getdirname.Po  getwd.Po  gstat.Po  hxstat64.Po  lchmod.Po  lchown.Po  link-link.Po  link.Po  lstat.Po  lstat64.Po  lxstat.Po  lxstat64.Po  mkdir.Po  mkfifo.Po  mknod.Po  pipe.Po  (+28 more)
locale/: Makefile  Makefile.am  Makefile.in
locale/.deps/: C-address.Po  C-collate.Po  C-ctype.Po  C-identification.Po  C-measurement.Po  C-messages.Po  C-monetary.Po  C-name.Po  C-numeric.Po  C-paper.Po  C-telephone.Po  C-time.Po  C_name.Po  SYS_libc.Po  global-locale.Po  nl_langinfo.Po
misc/: Makefile  Makefile.am  Makefile.in  error.c  fstab.c  fstab.c.new  fsync.c  ftruncate.c  ftruncate64.c  futimes.c  getdomain.c  gethostbyaddr.c  gethostbyname.c  gethostid.c  gethostname.c  getloadavg.c  getpagesize.c  getpass.c  getsysstats.c  ioctl.c  lutimes.c  lx  mkstemps.c  mlock.c  mmap.c  mmap64.c  mntent.c  mntent.c.orig  mntent_r.c  mprotect.c  mremap.c  msync.c  munlock.c  munmap.c  readv.c  select.c  sync.c  test_usleep.c  truncate.c  truncate64.c  (+4 more)
misc/.deps/: brk.Po  chflags.Po  chroot.Po  dirname.Po  efgcvt.Po  efgcvt_r.Po  err.Po  error.Po  fchflags.Po  fdatasync.Po  fgetxattr.Po  flistxattr.Po  fremovexattr.Po  (+75 more)
posix/: Makefile  Makefile.am  Makefile.in  alarm.c  clock_nanosleep.c  getegid.c  geteuid.c  getgid.c  getlogin.c  getppid.c  getsid.c  getuid.c  nanosleep.c  posix.def  setegid.c  seteuid.c  setgid.c  setuid.c  sleep.c  sysconf.c  test_alarm.c  test_uname.c  times.c  tst-truncate.c  uname.c  vfork.c  wait4.c  waitpid.c
resource/: Makefile  Makefile.am  Makefile.in  getrlimit.c  getrlimit64.c  setrlimit.c  setrlimit64.c
rt/: Makefile  Makefile.am  Makefile.in  clock_getres.c  clock_gettime.c  clock_settime.c  cpuspeed.c  get_clockfreq.c  tst-clock.c  tst-cpu.c
stdio/: Makefile  Makefile.am  Makefile.in  __fsetlocking.c  flockfile.c  fseeko.c  fseeko64.c  ftello.c  ftello64.c  ftrylockfile.c  funlockfile.c  stdfiles.c  test.txt  tst-fseek.c  tst-seek.c  tst-seek.in
stdio-common/: Makefile  Makefile.am  Makefile.in  _itoa.h  cuserid.c  errlist.c  getline.c  perror.c  perror.lst  remove.c  rename.c  tempname.c  test_tmpnam.c  tmpfile.c  tst-tmpnam.c
stdlib/: Makefile  Makefile.am  Makefile.in  alloca.h__  canonicalize.c  fullname.c  fullname.rc  rc  setenv.c
string/: Makefile  Makefile.am  Makefile.in  _strerror.c  basename.c  endian.h__  larg  strerror.c  strlcat.c  strlcat.h  strlcpy.c  strlcpy.h  strmode.c
time/: Makefile  Makefile.am  Makefile.in  clock.c  clocktest.c  getntptimeofday.c  gettimeofday.c  gettimeofday_d.c  libtime-bcc.def  libtime-bcc.lib  libtime.base  libtime.def  libtime.exp  libtime.lib  ll  setntptimeofday.c  settimeofday.c  strptime.c  test_getntptimeofday.c  test_gettimeofday.c  test_setntptimeofday.c  test_settimeofday.c  tzset.c  tzset.c.win32
wcsmbs/: Makefile  Makefile.am  Makefile.in
wctype/: Makefile  Makefile.am  Makefile.in  lc
win32/: Makefile  Makefile.am  Makefile.in  fullname.rc  fullpath.c  fullpath.rc  getmachinfo.c  getosinfo.c  osname.c  osname.rc  progname.c  ps.rc  rootdir.c  rootdir.d  setenv_BSD.c  splitpath.c  sysinfo.c  test_open.c  test_progname.c  winerr.c  wsacleanup.c  wsaerr.c  wsinit.c
(+294 files in other folders)
