#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include ../make.common

lib_LIBRARIES = libargp.a

libargp_a_SOURCES = \
argp-ba.c \
argp-eexst.c \
argp-fmtstream.c \
argp-fs-xinl.c \
argp-help.c \
argp-parse.c \
argp-pv.c \
argp-pvh.c \
argp-xinl.c
