#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include ../make.common

lib_LIBRARIES = liblocale.a

$(noinst_PROGRAMS): $(lib_LIBRARIES)

liblocale_a_SOURCES = \
C_name.c \
C-address.c \
C-collate.c \
C-ctype.c \
C-identification.c \
C-measurement.c \
C-messages.c \
C-monetary.c \
C-name.c \
C-numeric.c \
C-paper.c \
C-telephone.c \
C-time.c \
C-time.c \
global-locale.c \
nl_langinfo.c \
SYS_libc.c
