#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include ../make.common

lib_LIBRARIES = libresource.a

libresource_a_SOURCES = \
getpriority.c \
getrlimit.c \
getrlimit64.c \
nice.c \
setpriority.c \
setrlimit.c \
setrlimit64.c \
ulimit.c \
vlimit.c
